# pet-tokio

./: .env  .gitignore  Cargo.toml  README.md  books.json  local.properties
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/src/: constants.rs  error.rs  lib.rs
crates/libs/lib-core/src/bmc/: book_info.rs  general.rs  mod.rs  order.rs  scheme.rs  storage.rs  user.rs
crates/libs/lib-core/src/context/: app_context.rs
crates/libs/lib-core/src/macro_util/: select.rs
crates/libs/lib-core/src/notify/: mod.rs  order.rs
crates/libs/lib-core/src/task/: delivery.rs  main.rs  main_task.rs  manager.rs  mod.rs  order.rs  storage.rs
crates/libs/lib-core/src/task/kafka/: consumer_task.rs  mod.rs  producer.rs  producer_task.rs
crates/libs/lib-dto/: Cargo.toml
crates/libs/lib-dto/src/: book.rs  lib.rs  order.rs  temp.rs  user.rs
crates/libs/lib-load/: Cargo.toml
crates/libs/lib-load/resources/: books_refactored.json
crates/libs/lib-load/src/: lib.rs
crates/libs/lib-load/src/requests/: mod.rs  user_context.rs
crates/libs/lib-load/src/scenario/: books.rs  common.rs  load.rs  mod.rs  stage_01.rs
crates/libs/lib-load/src/utils/: body_utils.rs  mod.rs
crates/libs/lib-utils/: Cargo.toml
crates/libs/lib-utils/src/: b64.rs  constants.rs  json.rs  jwt.rs  lib.rs  rpc.rs  time.rs
crates/libs/lib-web/: Cargo.toml
crates/libs/lib-web/src/: error.rs  lib.rs
crates/libs/lib-web/src/app/: app.rs  auth_app.rs  context.rs  mod.rs  web_app.rs
crates/libs/lib-web/src/ctx/: mod.rs
crates/libs/lib-web/src/handlers/: auth.rs  login.rs  mod.rs  rpc.rs
crates/libs/lib-web/src/handlers/rpc/: book.rs  mod.rs  order.rs  rpc.rs
crates/libs/lib-web/src/middleware/: mod.rs  mw_ctx.rs  mw_req_stamp.rs  mw_res_map.rs
crates/services/auth-server/: Cargo.toml
crates/services/auth-server/src/: main.rs
crates/services/entry-point/: Cargo.toml
crates/services/entry-point/src/: main.rs
crates/services/load-server/: Cargo.toml
crates/services/load-server/src/: main.rs
crates/services/load-server/src/requests/: mod.rs  user_context.rs
crates/services/load-server/src/scenario/: common.rs  load.rs  mod.rs  stage_01.rs
crates/services/load-server/src/utils/: file.rs
crates/services/web-server/: Cargo.toml
crates/services/web-server/src/: main.rs
crates/tests/edu/src/: lib.rs
crates/tests/edu/src/channel/: mod.rs
crates/tests/edu/src/channel/mpmc/: channel.rs  error.rs  mod.rs  receiver.rs  sender.rs
crates/tests/edu/src/channel/mpmc/test/: mod.rs
crates/tests/edu/src/common/: error.rs  storage.rs
crates/tests/edu/src/common/processors/: check_order_processor.rs  mod.rs
crates/tests/edu/src/trait_objects/: order.rs
crates/tests/it/: Cargo.toml
crates/tests/it/resources/test/: books_refactored.json
crates/tests/it/src/context/: context.rs  mod.rs  sql.rs
crates/tests/it/src/dev/: mod.rs
crates/tests/it/src/dev/auth/: dev.rs
crates/tests/it/src/dev/web/: bad_request.rs  book_add.rs  login.rs  mod.rs  rpc.rs  scenario.rs
crates/tests/it/src/utils/: body_utils.rs  defaults.rs  file_utils.rs  mod.rs
db/help_queries/: drop_tables.sql
db/migrations/: 0002_insert.sql
db/migrations-auth/: 0001_users_table.sql  0002_book_info_table.sql  0003_book_storage_table.sql  0004_order_table.sql  0005_order_trigger.sql
docker/: docker-compose.yaml  help.txt
k8s/: deploy_infra.sh  install.txt
k8s/postgresql/: Dockerfile  dpl-psql.yaml  svc-psql.yaml
k8s/redis/: dpl-redis.yaml  svc-redis.yaml
