[package]
name = "lib-web"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
# -- App Libs
lib-core = { path = "../../libs/lib-core"}
lib-dto = { path = "../../libs/lib-dto"}
lib-utils = { path = "../../libs/lib-utils"}

# nils dependencies
axum = { version = "0.7", features = ["tokio", "http1"] }
tokio = { version = "1", features = ["full"] }
postgres = "0.19.3"
tokio-postgres = "0.7.11"

dotenv = "0.15.0"

sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-rustls"] }
redis = "0.28.1"

java-properties = "2.0.0"
rust_decimal = { version = "1.36", features = ["db-postgres"] }
rust_decimal_macros = "1.36"


http-body-util = "0.1.0"
hyper = { version = "1.0.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["client", "http1", "client-legacy"] }
mime = "0.3"
serde_json = "1.0"
tower-http = { version = "0.5.0", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

testcontainers = "0.14.0"
tower = "0.5.1"

# -- Json
serde = { version = "1", features = ["derive"] }
serde_with = { workspace = true }

# -- Web
tower-cookies = "0.10"
rpc-router = "0.1.3"

# -- Others
time = { workspace = true }
uuid = {version = "1", features = ["v4","fast-rng",]}
thiserror = "2.0.11"

strum_macros = "0.26"