[package]
name = "auth-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# -- App Libs
lib-core = { path = "../../libs/lib-core"}
lib-dto = { path = "../../libs/lib-dto"}
lib-web = { path = "../../libs/lib-web"}

# -- Async
tokio = { version = "1", features = ["full"] }
axum = {version = "0.7", features = ["macros"]}

sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-rustls"] }


# -- Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2.3"
serde = { version = "1.0.217", features = ["derive"] }
uuid = { version = "1.12.0", features = ["v4"] }
serde_json = "1.0.136"

dotenv = "0.15.0"

