[package]
name = "entry-point"
version = "0.1.0"
edition = "2021"

[dependencies]
# -- App Libs
lib-core = { path = "../../libs/lib-core"}

# -- Async
tokio = { version = "1", features = ["full"] }

# -- Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2.3"

