[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# -- App Libs
lib-core = { path = "../../libs/lib-core"}
lib-web = { path = "../../libs/lib-web"}

# -- Async
tokio = { version = "1", features = ["full", "tracing"] }
axum = {version = "0.7", features = ["macros"]}

sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-rustls"] }


# -- Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2.3"
console-subscriber = { workspace = true }

opentelemetry = { version = "0.19.0", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version="0.12.0",  features = ["tonic", "metrics"] }
opentelemetry-semantic-conventions = { version="0.11.0" }
tracing-opentelemetry = "0.19.0" # Integration between tracing and OpenTelemetry

dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
tokio-util = "0.7.13"

